--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "apexcharts": "^3.36.3",
+    "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.41.3",
+    "react-hook-geolocation": "^1.1.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
