--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.41.3",
     "react-hook-geolocation": "^1.1.0",
+    "react-icons": "^4.8.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
