--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-responsive": "^8.0.5",
     "apexcharts": "^3.36.3",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
@@ -22,6 +23,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
